--- a/src/input.css
+++ b/src/input.css
@@ -29,6 +29,16 @@ button img {
     
   }
 
+  footer img {
+    margin-top: 10px;
+    height: 80px;
+    width: 80px;
+    border-radius: 9999px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
 @keyframes slide {
     0% { transform: translateX(0); } /* start position */
     10% { transform: translateX(-40%); } /* end position */
