--- a/src/input.css
+++ b/src/input.css
@@ -7,7 +7,7 @@ body{
 }
 
 .logo {
-    background-color: antiquewhite;
+    /* background-color: antiquewhite; */
     display: block;
     height: 165px;
     width: 350px;
@@ -76,10 +76,6 @@ button img {
     
   }
 
-  button :hover{
-    transform: scale(1.5);
-  }
-
   footer img {
     margin-top: 10px;
     height: 80px;
@@ -98,8 +94,22 @@ button img {
     margin: 20px;
   }
 
+  .sliding a :hover {
+    color: whitesmoke;
+    transform: scale(1.2);
+   }
   a :hover {
    color: whitesmoke;
+   transform: scale(1.3);
+  }
+
+  .samples img{
+    border-radius: 40px;
+    margin: 30px;
+    /* align-items: center; */
+    /* display: block;
+    margin-left: auto;
+    margin-right: auto; */
   }
 
   #contact{
