--- a/src/input.css
+++ b/src/input.css
@@ -2,8 +2,15 @@
 @tailwind components;
 @tailwind utilities;
 
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
 body{
     background-color: black;
+
 }
 
 .logo {
@@ -103,13 +110,33 @@ button img {
    transform: scale(1.3);
   }
 
-  .samples img{
-    border-radius: 40px;
-    margin: 30px;
+  .samples{
+    display: flex;
+    /* background-color: rebeccapurple; */
+    /* justify-content: center;
+    text-align: center;
+    margin: 40px 20px 10px 20px; */
+    flex-direction: row-reverse;
+    justify-content: space-between;
+    align-items: center;
+  }
+  .dream{
+    display: flex;
+    flex-direction: column;
+    width: 49%;
+    /* border-radius: 40px;
+    margin: 10px; */
+    /* box-sizing: border-box; */
     /* align-items: center; */
     /* display: block;
     margin-left: auto;
     margin-right: auto; */
+  }
+
+  .dream img{
+    width: 100%;
+    border-radius: 20px;
+    padding-bottom: 15px;
   }
 
   #contact{
@@ -152,5 +179,14 @@ button img {
         margin-top: 3px;
     }
     
+}
+
+@media only screen and (max-width: 769px){
+    .samples{
+        flex-direction: column;
+    }
+    .dream{
+        width: 100%;
+    }
 }
 
