--- a/src/input.css
+++ b/src/input.css
@@ -117,7 +117,7 @@ p{
     overflow: hidden; 
     display: inline-block; /* make text display inline */
     white-space: nowrap; /* prevent line breaks in text */
-    animation: slide 3s; /* apply animation */
+    /* animation: slide 3s; apply animation */
 
 }
 
@@ -127,7 +127,7 @@ button{
     overflow: hidden; 
     display: inline-block; /* make text display inline */
     white-space: nowrap; /* prevent line breaks in text */
-    animation: slide 3s; /* apply animation */
+    /* animation: slide 3s; apply animation */
 }
 button img {
     text-align: center;
